Se agrega geolocalizacion mediante API Javascript de GoogleMaps

--- a/www/index.html
+++ b/www/index.html
@@ -25,10 +25,17 @@
 
     <ion-pane>
       <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
+        <h1 class="title">XtraTime</h1>
       </ion-header-bar>
-      <ion-content>
+      <ion-content ng-controller="MapController">
+            <div id="map" data-tap-disabled="true"></div>
       </ion-content>
     </ion-pane>
+    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAUZiRPTk9xMQ1hunqHQxbmqqouVLfd1WQ&sensor=true"></script>
+    </body>
+</html>
+
   </body>
 </html>
+
+
